# hermes-handoff-context-engine

./: .gitignore  README.md  __init__.py  after-install.md  engine.py  hook.py  plugin.yaml  pyproject.toml  state.py
skills/self-handoff/: SKILL.md
skills/writing-a-self-handoff/: SKILL.md
